--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,8 @@ h4,
 h5,
 h6 {
   font-family: "Raleway", sans-serif;
+
+color: #11dbcf;
 }
 
 /*--------------------------------------------------------------
@@ -310,18 +312,18 @@ h6 {
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
-  color: #111;
+  color: rgb(255, 0, 0);
 }
 
 #hero p {
-  color: #111;
+  color: #e80368;
   margin: 15px 0 0 0;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
 }
 
 #hero p span {
-  color: #0563bb;
+  color: #18d26e; 
   letter-spacing: 1px;
 }
 
