--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,6 @@ h4,
 h5,
 h6 {
   font-family: "Raleway", sans-serif;
-
-color: #11dbcf;
 }
 
 /*--------------------------------------------------------------
@@ -299,7 +297,7 @@ color: #11dbcf;
 
 #hero:before {
   content: "";
-  background-color: #d7dce1;
+  background: rgba(255, 255, 255, 0.8);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -312,18 +310,18 @@ color: #11dbcf;
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
-  color: rgb(255, 0, 0);
+  color: #45505b;
 }
 
 #hero p {
-  color: #e80368;
+  color: #45505b;
   margin: 15px 0 0 0;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
 }
 
 #hero p span {
-  color: #18d26e; 
+  color: #0563bb;
   letter-spacing: 1px;
 }
 
@@ -381,7 +379,7 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  color: #111;
+  color: #45505b;
 }
 
 .section-title h2::before {
